edit to description

--- a/class.ipynb
+++ b/class.ipynb
@@ -39,7 +39,8 @@
     "**CLAGE** - Age of oldest trade line in months<br>\n",
     "**NINQ** - Number of recent credit lines<br>\n",
     "**CLNO** - Number of credit lines<br>\n",
-    "**DEBTINC** - Debt-to-income ratio<br>"
+    "**DEBTINC** - Debt-to-income ratio<br>\n",
+    "https://www.kaggle.com/ajay1735/hmeq-data"
    ]
   },
   {
